--- a/cli/build.gradle
+++ b/cli/build.gradle
@@ -83,6 +83,7 @@ dependencies {
 	compile group: "org.gradle", name: "gradle-core", version: "3.0"
 	compile group: "org.gradle", name: "gradle-tooling-api", version: "3.0"
 	compile group: "org.jsoup", name: "jsoup", version: "1.11.3"
+	compile group: "org.zeroturnaround", name: "zt-process-killer", version: "1.9"
 	compile name: "org.objectweb.asm-6.0.0"
 	compile name: "org.objectweb.asm.analysis-6.0.0"
 	compile name: "org.objectweb.asm.commons-6.0.0"
