BLADE-487 get dockerImageId and dockerContainerId from ProjectInfo model

--- a/cli/test-resources/projects/testws1/settings.gradle
+++ b/cli/test-resources/projects/testws1/settings.gradle
@@ -1,13 +1,25 @@
 buildscript {
 	dependencies {
-		classpath group: "com.liferay", name: "com.liferay.gradle.plugins.workspace", version: "1.0.35"
+		classpath group: "com.liferay", name: "com.liferay.gradle.plugins.workspace", version: "2.1.13"
+		classpath group: "net.saliman", name: "gradle-properties-plugin", version: "1.4.6"
 	}
 
 	repositories {
 		maven {
-			url "https://cdn.lfrs.sl/repository.liferay.com/nexus/content/groups/public"
+			url "https://repository-cdn.liferay.com/nexus/content/groups/public"
 		}
+		mavenLocal()
 	}
 }
 
+apply plugin: "net.saliman.properties"
+
 apply plugin: "com.liferay.workspace"
+
+
+gradle.liferayWorkspace {
+	dockerImageId {
+		"custom-workspace-image:" + "1.0.0"
+	}
+	dockerContainerId = "custom-workspace-liferay1"
+}
