--- a/cli/build.gradle
+++ b/cli/build.gradle
@@ -102,6 +102,13 @@ dependencies {
 	compile name: "org.objectweb.asm.commons-6.0.0"
 	compile name: "org.objectweb.asm.tree-6.0.0"
 	compile name: "org.objectweb.asm.util-6.0.0"
+
+	compile(group: "com.liferay", name: "com.liferay.portal.tools.bundle.support", version: "3.6.0") {
+		exclude group: "biz.aQute.bnd", module: "biz.aQute.bnd"
+	}
+
+	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+
 	compile project(":gradle-tooling")
 
 	compileOnly group: "org.osgi", name: "osgi.core", version: "6.0.0"
