--- a/cli/build.gradle
+++ b/cli/build.gradle
@@ -74,10 +74,9 @@ dependencies {
 	bladeExtensions group: "com.liferay.blade", name: "com.liferay.project.templates.js.widget", version: "1.0.0-SNAPSHOT", changing: true
 
 	compile group: "biz.aQute.bnd", name: "biz.aQute.bndlib", version: "4.3.0"
-	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+	compile group: "com.google.code.gson", name: "gson", version: "2.8.6"
 	compile group: "com.liferay", name: "com.liferay.gogo.shell.client", version: "1.0.0"
 	compile group: "com.liferay", name: "com.liferay.project.templates", version: "5.0.43"
-	compile group: "com.liferay", name: "com.liferay.portal.tools.bundle.support", version: "3.5.5"
 	compile group: "commons-io", name: "commons-io", version: "2.6"
 	compile group: "org.apache.ant", name: "ant", version: "1.10.7"
 	compile group: "org.apache.commons", name: "commons-compress", version: "1.18"
@@ -99,15 +98,14 @@ dependencies {
 	compile group: "org.gradle", name: "gradle-core", version: "5.6.4"
 	compile group: "org.gradle", name: "gradle-tooling-api", version: "5.6.4"
 	compile group: "org.jsoup", name: "jsoup", version: "1.11.3"
-
 	compile name: "org.objectweb.asm-6.0.0"
 	compile name: "org.objectweb.asm.analysis-6.0.0"
 	compile name: "org.objectweb.asm.commons-6.0.0"
 	compile name: "org.objectweb.asm.tree-6.0.0"
 	compile name: "org.objectweb.asm.util-6.0.0"
-
 	compile project(":gradle-tooling")
 
+	compileOnly group: "com.liferay", name: "com.liferay.portal.tools.bundle.support", version: "3.5.5"
 	compileOnly group: "org.osgi", name: "osgi.core", version: "6.0.0"
 
 	testCompile gradleTestKit()
