--- a/cli/build.gradle
+++ b/cli/build.gradle
@@ -78,8 +78,11 @@ dependencies {
 	compile group: "com.liferay", name: "com.liferay.project.templates", version: "5.0.45"
 	compile group: "commons-io", name: "commons-io", version: "2.6"
 	compile group: "org.apache.ant", name: "ant", version: "1.10.7"
+	compile group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.4'
 	compile group: "org.apache.commons", name: "commons-compress", version: "1.18"
 	compile group: "org.apache.commons", name: "commons-lang3", version: "3.4"
+	compile group: 'org.apache.commons', name: 'commons-configuration2', version: '2.7'
+	compile group: 'org.apache.commons', name: 'commons-text', version: '1.8'
 	compile group: "org.apache.maven", name: "maven-aether-provider", version: "3.3.9"
 	compile group: "org.apache.maven", name: "maven-settings", version: "3.3.9"
 	compile group: "org.apache.maven", name: "maven-settings-builder", version: "3.3.9"
